<resources>
    <string name="app_name">MeetAFriend</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings"><b>Settings</b></string>
    <string name="settings">SETTINGS</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="home">HOME</string>
    <string name="friends">FRIENDS</string>
    <string name="meetSomeone">Meet someone random</string>
    <string name="notifications"><b>Notifications / Sounds</b></string>
    <string name="finds"><b>Finds</b></string>
    <string name="findFriends">Friends Only</string>
    <string name="onlyPicture">With pictures</string>
    <string name="showNotifications">Show Notifications</string>
    <string name="title_activity_home">home</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_chats">Chats</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_interests">Interests</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_activity_found">Found</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="editProfile">Edit interests</string>
    <string name="sameInterests">Same interests</string>
    <string name="searchFor"><b>Search for:</b></string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="searchRadius"><b>Search Radius</b></string>
    <string name="kilometers">0 KM</string>
    <string name="googlePlay">Sign in via Google</string>
    <string name="meetafriend">Meet A Friend!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="personalinformation">Personal Information</string>
    <string name="email">E-mail</string>
    <string name="age">Age</string>
    <string name="searchInformation">Search Information</string>
    <string name="YouAre">You are:</string>
    <string name="youWant">You want:</string>
    <string name="facebookSignIn">Sign in via Facebook</string>
    <string name="createAccount">Create account</string>
    <string name="title_activity_google_play_services">GooglePlayServicesActivity</string>
    <string name="changingUsernameHome">Username: Dummy Text</string>
    <string name="changingAgeHome">Age: Dummy Text</string>
    <string name="changingLocationHome">Location: Dummy Text</string>
    <string name="recommended">Recommended people</string>
    <string name="customizeFinds">Customize your finds</string>
    <string name="changeInSettings">Once you press this button, you will be able to change your find settings on the settings page</string>
    <string name="title_activity_other">Other</string>
    <string name="Chat">Chat!</string>
    <string name="dontChat">Don\'t Chat!</string>
    <string name="logOut">Logout</string>
    <string name="accountSettings">Account Settings</string>
    <string name="yourChoice">Your Choices:</string>
    <string name="Name">Name :</string>
    <string name="Age">Date of birth :</string>
    <string name="Gender">Gender :</string>
    <string name="Interests">Interests :</string>
    <string name="MyInterests">My interests :</string>

</resources>
