<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context="com.meetafriend.meetafriend.Search">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/toolbar"></include>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/customizeFinds"
        android:id="@+id/customizeFinds"
        android:layout_below="@+id/tool_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customizeFinds"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/gridLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/finds"
            android:id="@+id/findsSearch"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/findFriends"
            android:id="@+id/textView8"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/onlyFriendSwitch"
            android:layout_row="1"
            android:layout_column="14"
            android:checked="false"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/onlyPicture"
            android:id="@+id/textView7"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/onlyPictureSwitch"
            android:layout_row="2"
            android:layout_column="14"
            android:checked="false"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sameInterests"
            android:id="@+id/textView9"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_marginLeft="10dp" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sameInterestsSwitch"
            android:layout_row="3"
            android:layout_column="14"
            android:checked="false"
            android:layout_marginRight="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/searchFor"
            android:id="@+id/textView10"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_marginTop="40dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:id="@+id/radioButton7"
            android:layout_row="5"
            android:layout_column="0"
            android:checked="false"
            android:layout_marginLeft="60dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:id="@+id/radioButton8"
            android:layout_row="5"
            android:layout_column="14"
            android:checked="false"
            android:layout_marginLeft="-90dp" />
    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/searchRadius"
        android:id="@+id/textView11"
        android:layout_below="@+id/gridLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar2"
        android:layout_below="@+id/textView11"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/kilometers"
        android:id="@+id/textView12"
        android:layout_alignBottom="@+id/seekBar2"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meetafriend"
        android:id="@+id/button3"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/textView12"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/changeInSettings"
        android:id="@+id/textView13"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp" />


</RelativeLayout>
