<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.meetafriend.meetafriend.Register">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Account!"
        android:id="@+id/Register"
        android:onClick="createAccount"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/register"
            android:id="@+id/register"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:text="@string/personalinformation"
            android:id="@+id/personalInfo"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="3dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:background="@drawable/customedittext"
            android:ems="10"
            android:id="@+id/usernameRegister"
            android:hint="@string/username"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@drawable/customedittext"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:id="@+id/passwordRegister"
            android:hint="@string/password"
            android:gravity="center_horizontal"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:background="@drawable/customedittext"
            android:ems="10"
            android:id="@+id/emailRegister"
            android:hint="@string/email"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp" />

        <EditText
            android:layout_width="86dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:background="@drawable/customedittext"
            android:ems="10"
            android:id="@+id/ageRegister"
            android:hint="@string/age"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="android:color/black"
            android:text="@string/searchInformation"
            android:id="@+id/searchInformation"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/YouAre"
                android:id="@+id/textView3"
                android:layout_marginLeft="20dp" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:id="@+id/radioButton3"
                        android:checked="false"
                        android:layout_marginLeft="20dp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:id="@+id/radioButton4"
                        android:checked="false"
                        android:layout_marginLeft="20dp" />
                </LinearLayout>
            </RadioGroup>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
